--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "test-main.js"
   ],
   "dependencies": {
-    "angular-material": "^1.0",
+    "angular-material": "~1.0",
     "font-awesome": "4.3.0",
     "w20": "~2.1"
   },
