--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "w20-material",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "ignore": [
     ".*",
     "*.iml",
@@ -16,14 +16,11 @@
     "test-main.js"
   ],
   "dependencies": {
-    "angular-material": "~1.0",
-    "font-awesome": "4.3.0",
-    "w20": "~2.1"
-  },
-  "resolutions": {
-    "angular": ">=1.3.16"
+    "angular-material": "^1.0",
+    "font-awesome": "^4.3.0",
+    "w20": "^2.2"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.16"
+    "angular-mocks": "^1.4"
   }
 }
