--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "w20",
-  "version": "2.2.0",
-  "description": "SeedStack Web framework",
+  "version": "2.1.3",
+  "description": "W20 add-on integration Google Material Design CSS framework through angular-material",
   "license": "MPL 2.0",
   "devDependencies": {
     "grunt": "~0.4",
