Update w20 to master

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "w20-material",
-  "version": "2.1.4",
+  "version": "2.1.5",
   "ignore": [
     ".*",
     "*.iml",
@@ -16,14 +16,11 @@
     "test-main.js"
   ],
   "dependencies": {
-    "angular-material": "^1.0",
-    "font-awesome": "^4.3.0",
-    "w20": "^2.2.0"
+    "angular-material": "^1.0.6",
+    "font-awesome": "^4.5.0",
+    "w20": "#master"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.8"
-  },
-  "resolutions": {
-    "angular": "~1.4.8"
+    "angular-mocks": "^1.5.2"
   }
 }
