Add explicit dependencies to angular to force resolution

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,11 @@
     "test-main.js"
   ],
   "dependencies": {
-   "angular-material": "~1.0.6",
+    "angular": "~1.4.8",
+    "angular-animate": "~1.4.8",
+    "angular-aria": "~1.4.8",
+    "angular-messages": "~1.4.8",
+    "angular-material": "~1.0.6",
     "font-awesome": "~4.5.0",
     "w20": "#master"
   },
