update to angular 1.6

--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "w20",
-  "version": "2.1.5",
+  "name": "w20-material",
+  "version": "2.2.0-rc.3",
   "description": "W20 add-on integration Google Material Design CSS framework through angular-material",
   "license": "MPL 2.0",
   "devDependencies": {
     "grunt": "~0.4",
-    "grunt-bower-task": "~0.4",
     "grunt-contrib-clean": "~0.6",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "~0.7",
-    "grunt-contrib-jshint": "~0.10",
+    "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-coveralls": "^1.0.0",
-    "grunt-karma": "~0.9",
+    "grunt-karma": "^1.0.0",
     "grunt-ngdocs": "^0.2.8",
-    "karma": "~0.12",
+    "jasmine-core": "~2.4",
+    "karma": "~0.13",
     "karma-coverage": "~0.2",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1",
     "karma-requirejs": "~0.2",
     "requirejs": "~2.1"
+  },
+  "dependencies": {
+    "w20": "~2.4.0-rc",
+    "angular-animate": "^1.6.6",
+    "angular-aria":"^1.6.6",
+    "angular-messages": "^1.4.8",
+    "angular-material": "^1.1.5",
+    "font-awesome": "^4.7.0"
   }
 }
